C2: assert(init_offset >= 0) failed: positive offset from object start

XMLWordPrintable

    • b19

        C2 fails to compile attached example with:
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/9190d864-6621-4810-ba08-d8d8c75ba674-S395/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/b528528e-501d-44e6-b294-995b8b2b1881/runs/3f528bbf-2970-4319-80de-390e34a632b0/workspace/open/src/hotspot/share/opto/superword.cpp:890), pid=8455, tid=8466
        # assert(init_offset >= 0) failed: positive offset from object start
        #
        # JRE version: Java(TM) SE Runtime Environment (11.0+7) (fastdebug build 11-ea+7)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-ea+7, compiled mode, compressed oops, g1 gc, linux-amd64)
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e %P %I %h" (or dumping to /tmp/fuzzer.tmp.XWph5hV3Hg/core.8455)
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- S U M M A R Y ------------

        Command Line: -Xmx1G -Xcomp -Xbatch -XX:-TieredCompilation -XX:CompileOnly= Test

        Host: slc16ijb, Intel Core Processor (Haswell, no TSX), 4 cores, 14G, Oracle Linux Server release 7.4
        Time: Wed Apr 4 16:34:21 2018 PDT elapsed time: 7 seconds (0d 0h 0m 7s)

        --------------- T H R E A D ---------------

        Current thread (0x00007f844c267000): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=8466, stack(0x00007f843c8bc000,0x00007f843c9bd000)]


        Current CompileTask:
        C2: 7718 1363 b Test::mainTest (780 bytes)

        Stack: [0x00007f843c8bc000,0x00007f843c9bd000], sp=0x00007f843c9b6fa0, free space=1003k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x180fd12] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x162
        V [libjvm.so+0x1810baf] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
        V [libjvm.so+0xb28abd] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
        V [libjvm.so+0x16d96ea] SuperWord::ref_is_alignable(SWPointer&) [clone .part.239]+0x4ba
        V [libjvm.so+0x16ded4f] SuperWord::find_align_to_ref(Node_List&)+0x69f
        V [libjvm.so+0x16eb45e] SuperWord::find_adjacent_refs()+0x18e
        V [libjvm.so+0x16ee080] SuperWord::SLP_extract()+0x5a0
        V [libjvm.so+0x16ee47a] SuperWord::transform_loop(IdealLoopTree*, bool)+0x2ca
        V [libjvm.so+0x12655db] PhaseIdealLoop::build_and_optimize(bool, bool)+0x113b
        V [libjvm.so+0xa8df29] Compile::Optimize()+0xcd9
        V [libjvm.so+0xa8f4ee] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x124e
        V [libjvm.so+0x8b27d2] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2e2
        V [libjvm.so+0xa99d48] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3b8
        V [libjvm.so+0xa9a9d1] CompileBroker::compiler_thread_loop()+0x281
        V [libjvm.so+0x17635f2] JavaThread::thread_main_inner()+0x242
        V [libjvm.so+0x17637f4] JavaThread::run()+0x144
        V [libjvm.so+0x1495212] thread_native_entry(Thread*)+0x112

          1. FuzzerUtils.java
            13 kB
          2. Test.java
            15 kB
          3. hs_err_pid8455.log
            59 kB
          4. Test2.java
            0.6 kB

              Assignee:
              Vladimir Kozlov
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: