8202948: C2: assert(init_offset >= 0) failed: positive offset from object start

Convert the assert into compilation check which will skip superword optimization

Reviewed-by: roland, thartmann